# auth-server

./: Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  init.sh
.sqlx/: query-02e765d5feebaff0711d717b672e4bec31ee9a05dc0d0d877b0cb56c7e2e497a.json  query-35d161b22ad9639581c4328340060923356be95f2d2b868c662240f744c56baf.json  query-4804c529d84cd4d7abc1266191b11f855e3a6b1cbc28240b14ef81e0f5dcce05.json  query-864d5b61158a21e3e320029bc6c2ca90f718828830ec7e6c3544e6b62c8411fe.json  query-90377330139d6e6df3f4956d07db0d7bc019af06904d59079dec5aef15f0ed84.json  query-af60a4e07d7267fc57a6ba9a0775fafd36d8436ee2d169243bf6ec2865deb393.json  query-b9ccb275e4f92a6a669f6c253e5b70c2b423b857ac27e047d3549f25f0d4e592.json  query-cc09816304335cad5b7781553c8fba92d00bc0c268a55462e2dfd3924f124bf6.json  query-db3f3ffe58ea364b0bd250b59608882b9daf74ef7bd6e6b2352ed952cc0b2dac.json  query-f1a8f7c365de86fc68b915b301fe9bce7f9712562a592171f78aa2a1c7fe1275.json
migrations/: 20240805091354_initial_setup.down.sql  20240805091354_initial_setup.up.sql  20240805094145_create_users.up.sql  20240805094307_create_roles.down.sql  20240805094307_create_roles.up.sql  20240805100525_init_system_roles.down.sql  20240805100525_init_system_roles.up.sql  20240815080756_alter-users-add-status.down.sql  20240815080756_alter-users-add-status.up.sql
src/: core_utils.rs  db.rs  main.rs  redis_db.rs
src/auth/: auth_controller.rs  auth_dto.rs  auth_service.rs  auth_utils.rs  mod.rs
src/permissions/: mod.rs  models.rs  permission_controller.rs  permission_dto.rs  permission_service.rs
src/role/: mod.rs  (+5 more)
(+4 files in other folders)
